javascript barely ok

--- a/nodejs/mizot/public/style/style.css
+++ b/nodejs/mizot/public/style/style.css
@@ -3,8 +3,8 @@ body {
 	background: #53777A;
 	background-image:url(../img/points.jpg);
 	margin-top: 1em;
-	font-family: "News Cycle", "Arial", "Helvetica", sans-serif;
-	font-size:25px;
+	font-family: "Open Sans", "Arial", "Helvetica", sans-serif;
+	font-size:21px;
 }
 
 #body {
@@ -18,8 +18,8 @@ body {
 	font-family:"Bangers", "Arial";
 	padding:8px;
 	border: 5px solid #CDB380; 
+	border-bottom:0px;
 	background-color: rgba(232,221,203,0.4);
-	border-bottom: 1px solid #CDB380; 
 	padding-right : 20px;
 	padding-left : 20px;
 }
@@ -31,32 +31,42 @@ body {
 			#E8DDCB -1px 1px 2px,  
 			#E8DDCB -1px -1px 2px,  
 			#E8DDCB 1px -1px 2px;  
-	margin-bottom: 10px;
+	margin-bottom: 30px;
 }
 
 #links {
 	background: #E8DDCB;
 	text-align : right;
 	font-size: 25px;
-	padding-right : 20px;
-	padding-left : 10px;
+	padding-right : 40px;
+	padding-left : 40px;
 	margin-bottom: 6px;
+	margin-left: 180px;
 }
 
 .link {
 	padding:8px;
 	padding-bottom:15px;
+	padding-top: 11px;
 	margin:2px;
 }
 
-#selected_link {
+.selected_link {
+	padding:8px;
+	padding-bottom:15px;
+	padding-top: 11px;
+	margin:2px;
+
 	color: #E8DDCB;
 	background: #CDB380;
+	border-top: 4px solid #E8DDCB; 
+	border-left: 4px solid #E8DDCB; 
+	border-right: 4px solid #E8DDCB; 
 }
 
 #me_img {
-	border: 2px solid #FFFFFF;  
-	width: 95px;
+	border: 3px solid #FFFFFF;  
+	width: 90px;
 	box-shadow: 3px 3px 12px #555;
 	-moz-box-shadow: 3px 3px 12px #555;
 	-webkit-box-shadow: 3px 3px 12px #555;
@@ -66,22 +76,19 @@ body {
 	float: left;
 	padding: 10px;
 	margin-right: 15px;
-/*	margin-bottom: 10px;*/
 }
 
-#home {
-	
+.content {
 	background-color: rgba(232,221,203,0.9);
 	margin-left: auto; 
 	margin-right: auto;
 	padding: 40px;
 	border: 5px solid #CDB380; 
-	border-top: 1px solid #CDB380; 
+	border-top: 0px dashed #CDB380; 
 	text-align:justify;
-	/* C02942 
-
-	-moz-opacity:0.7;
-
-	opacity: 0.7;
-	*/
 }
+
+.invisible_content {
+	display : none;
+}
+
