--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -2,23 +2,28 @@
 html(lang="en")
 	head
 		title rmelisson
-		link(href="../public/style/style.css", media="screen", rel="stylesheet", type="text/css")
+		link(href="style/style.css", media="screen", rel="stylesheet", type="text/css")
 		link(href="http://fonts.googleapis.com/css?family=Bangers", rel="stylesheet", type="text/css")
-		link(href="http://fonts.googleapis.com/css?family=News+Cycle", rel="stylesheet", type="text/css")
+		link(href="http://fonts.googleapis.com/css?family=Open+Sans", rel="stylesheet", type="text/css")
 		script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js")
-		script(src="../public/javascript/jquery-corner.js")
-		script(src="../public/javascript/mizot.js")
+		script(src="javascript/jquery-corner.js")
+		script(src="javascript/mizot.js")
 	body
 		div#body
 			div#header 
 				div#title /home/rmelisson 
 				div#links 
-					span.link#selected_link home 
-					span.link work
-					span.link contact
-					span.link resume
-			div#home
+					span.selected_link#link_home home 
+					span.link#link_work work
+					span.link#link_contact contact
+					span.link#link_resume resume
+			div.content#home
 				div#img_div
-					img#me_img(src="../public/img/me.jpg")
-				div#welcome Welcome, I'm Remi Melisson, enthusiast developper or software craftsman. Here you can find some information about my computing activities. Feel free to contact me via email, Twitter or smoke signal.
-
+					img#me_img(src="img/me.jpg")
+				div#welcome Welcome here, I'm Remi Melisson, an enthusiast developper or rather, a software craftsman. Here you can find some information about my computing activities. Feel free to contact me via email, Twitter or smoke signal.
+			div.content.invisible_content#contact
+				blbalblabla contact me!
+			div.content.invisible_content#resume
+				download my resume here ...
+			div.content.invisible_content#work
+				recent work...
