--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -21,9 +21,20 @@ html(lang="en")
 				div#img_div
 					img#me_img(src="img/me.jpg")
 				div#welcome Welcome here, I'm Remi Melisson, an enthusiast developper or rather, a software craftsman. Here you can find some information about my computing activities. Feel free to contact me via email, Twitter or smoke signal.
-			div.content.invisible_content#contact
-				blbalblabla contact me!
-			div.content.invisible_content#resume
-				download my resume here ...
+			div.content.invisible_content#contact Well, you can find me there : <br /><br />
+				<a href="http://www.twitter.com/rmelisson"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-a.png" alt="Follow rmelisson on Twitter"/></a>
+				<br/>
+				<br/>
+				<a href="http://www.github.com/rmelisson"><img src="https://github.com/images/modules/header/logov3.png" alt="me on GitHub"/></a>
+				<br/>
+				<br/>
+				span#liam
+					<img src="img/enveloppe.jpg" alt="send me"/> 
+			div.content.invisible_content#resume Download my resume : <br /><br />
+				div#download
+					a(href='/', 'french resume') FR
+					\ / 
+					a(href='/', 'english resume') EN
+				
 			div.content.invisible_content#work
 				recent work...
