--- a/nodejs/mizot/public/style/style.css
+++ b/nodejs/mizot/public/style/style.css
@@ -7,6 +7,10 @@ body {
 	font-size:21px;
 }
 
+img {
+	border-style: none;
+}
+
 #body {
 	margin-left: auto; 
 	margin-right: auto;
@@ -58,7 +62,7 @@ body {
 
 .selected_link {
 	padding:10px;
-	padding-bottom:16px;
+	padding-bottom:17px;
 	padding-top: 11px;
 	margin:2px;
 
