--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -6,7 +6,7 @@ html(lang="en")
 		link(href="http://fonts.googleapis.com/css?family=Bangers", rel="stylesheet", type="text/css")
 		link(href="http://fonts.googleapis.com/css?family=Open+Sans", rel="stylesheet", type="text/css")
 		script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js")
-		script(src="javascript/jquery-corner.js")
+		script(src="javascript/jquery.corner.js")
 		script(src="javascript/mizot.js")
 	body
 		div#body
