--- a/nodejs/mizot/public/style/style.css
+++ b/nodejs/mizot/public/style/style.css
@@ -4,7 +4,7 @@ body {
 	background-image:url(../img/points.jpg);
 	margin-top: 1em;
 	font-family: "Open Sans", "Arial", "Helvetica", sans-serif;
-	font-size:21px;
+	font-size:18px;
 }
 
 img {
@@ -14,7 +14,7 @@ img {
 #body {
 	margin-left: auto; 
 	margin-right: auto;
-	width: 640px;
+	width: 740px;
 	border: 5px solid #CDB380; 
 	box-shadow: 5px 5px 15px #555;
 	-moz-box-shadow: 5px 5px 15px #555;
@@ -47,14 +47,14 @@ img {
 	padding-right : 40px;
 	padding-left : 40px;
 	margin-bottom: 6px;
-	margin-left: 180px;
+	margin-left: 140px;
 	box-shadow: 3px 3px 10px #555;
 	-moz-box-shadow: 3px 3px 10px #555;
 	-webkit-box-shadow: 3px 3px 10px #555;
 }
 
 .link {
-	padding:8px;
+	padding:10px;
 	padding-bottom:15px;
 	padding-top: 11px;
 	margin:2px;
@@ -77,6 +77,10 @@ img {
 			#033649 1px -1px 1px;  */
 }
 
+#welcome {
+	margin-top : 8px;
+}
+
 #me_img {
 	border: 3px solid #FFFFFF;  
 	width: 90px;
@@ -86,9 +90,25 @@ img {
 }
 
 #img_div {
-	float: left;
-	padding: 10px;
-	margin-right: 15px;
+	float : left;
+	padding : 10px;
+	margin-right: 20px;
+}
+
+#logo_div {
+	text-align : center;
+}
+
+.logo {
+	padding : 25px;
+	padding-bottom : 0px;
+}
+
+#logo_orange {
+	width : 10%;
+}
+#logo_inria {
+	width : 20%;
 }
 
 .content {
@@ -114,4 +134,25 @@ img {
 #download a, a.visited {
 	text-decoration:none;
 	color: #033649;  
+}
+
+h3 {
+	font-weight : bold;
+	font-style : italic;
+	text-decoration : underline;
+	color : #036564;
+	margin-top : 20px;
+	margin-bottom : 5px;
+	font-size : 22px;
+}
+
+.small {
+	font-size : 13px;	
+}
+
+ul { 
+	margin : 0px;
+	padding : 5px;
+	list-style-image:none;
+	list-style:none;
 }
