--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -5,6 +5,7 @@ html(lang="en")
 		link(href="style/style.css", media="screen", rel="stylesheet", type="text/css")
 		link(href="http://fonts.googleapis.com/css?family=Bangers", rel="stylesheet", type="text/css")
 		link(href="http://fonts.googleapis.com/css?family=Open+Sans", rel="stylesheet", type="text/css")
+		link(href="img/favicon.png", type="image/png", rel="shortucut icon")
 		script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js")
 		script(src="javascript/jquery.corner.js")
 		script(src="javascript/mizot.js")
@@ -15,12 +16,16 @@ html(lang="en")
 				div#links 
 					span.selected_link#link_home home 
 					span.link#link_work work
+					span.link#link_publications publications
 					span.link#link_contact contact
 					span.link#link_resume resume
 			div.content#home
 				div#img_div
 					img#me_img(src="img/me.jpg")
-				div#welcome Welcome here, I'm Remi Melisson, an enthusiast developper or rather, a software craftsman. Here you can find some information about my computing activities. Feel free to contact me via email, Twitter or smoke signal.
+				div#welcome Welcome here, I'm Remi Melisson, Ph.D. student and enthusiast developper. I started my thesis in october 2010 into the Orange Labs at Grenoble. My work is supervised by the INRIA ADAM Team, associated to the University of Lille 1. <br />	Here you can find some information about my work and other computing activities. Feel free to contact me via email, Twitter or smoke signal.
+				div#logo_div
+					img#logo_orange.logo(src="img/orange-logo.png")
+					img#logo_inria.logo(src="img/logo_INRIA.png")
 			div.content.invisible_content#contact Well, you can find me there : <br /><br />
 				<a href="http://www.twitter.com/rmelisson"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-a.png" alt="Follow rmelisson on Twitter"/></a>
 				<br/>
@@ -30,6 +35,7 @@ html(lang="en")
 				<br/>
 				span#liam
 					<img src="img/enveloppe.jpg" alt="send me"/> 
+
 			div.content.invisible_content#resume Download my resume : <br /><br />
 				div#download
 					a(href='/', 'french resume') FR
@@ -37,4 +43,30 @@ html(lang="en")
 					a(href='/', 'english resume') EN
 				
 			div.content.invisible_content#work
-				recent work...
+				... past projects :
+				h3 Mundle
+				p.small Mundle is a tool which provide a way for dynamically convert maven artifact into OSGi bundles at runtime. Based on bnd and Maven 3 API, it allows to benefit from the Maven dependency description in order to deploy Maven artifact as bundles. This tool should facilitate the migration of standard Maven based Java project onto OSGi platforms.
+				h3 FraSCAti on OSGi
+				p.small FraSCAti is a Java implementation of the Service Component Architecture (SCA) standard. It relies on the Fracal component model in order to allow dynamic reconfiguration on SCA based software. I am working on a merge between SCA and OSGi concept which could clarify the different responsibilities of those specifications.
+				h3 FraSCAti @authentication
+				p.small coming soon... 
+				h3 Binjiu
+				p.small Binjiu is a set of facility for using UPnP protocol in order to achieve remote calls within Java distributed applications. Building on top of CyberLink for Java (which is a java implementation of UPnP protocol), it supplies the discovery benefits of UPnP to service oriented Java software.
+				h3 MIND Project
+				p.small MIND is a project which depend on the Minalogic global competitive cluster. This project aims to provide a model and a valid infrastructure for developing lightweight (as well as dramatically lightweight) embedded software according to component based software engineering paradigms. More precisely, we are taking part in the development of an IDE (textual and graphical integrated editors) for component architecture definition. To achieve those goals, we are using the Fractal component model and the Eclipse Modeling Framework (EMF, GMF, TMF-Xtext).
+
+			div.content.invisible_content#publications 
+				ul
+					li 
+						h3 2011
+						ul
+							li
+								p.publi blalablablablaa
+					li 
+						h3 2010
+						ul
+							li
+								p.small <b>Reconfigurable Run-Time Support for Distributed Service Component Architectures.</b> Rémi Mélisson, Philippe Merle, Daniel Romero, Romain Rouvoy and Lionel Seinturier. In <i>25th International Conference on Automated Software Engineering (ASE'10)</i>. Tool Demonstration. Antwerp, Belgium. September, 2010. To appear. [HAL]
+							li
+								p.small <b>Supporting Pervasive and Social Communications with FraSCAti.</b> Rémi Mélisson, Daniel Romero, Romain Rouvoy and Lionel Seinturier. In <i>3rd International Workshop on Context-aware Adaptation Mechanisms for Pervasive and Ubiquitous Services (CAMPUS’10).</i> Electronic Communications of EASST (ECEASST). Amsterdam, Netherlands. June 10, 2010. To appear. [HAL]
+				
