--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -22,7 +22,7 @@ html(lang="en")
 			div.content#home
 				div#img_div
 					img#me_img(src="img/me.jpg")
-				div#welcome Welcome here, I'm Remi Melisson, Ph.D. student and enthusiast developper. I started my thesis in october 2010 into the Orange Labs at Grenoble. My work is supervised by the INRIA ADAM Team, associated to the University of Lille 1. <br />	Here you can find some information about my work and other computing activities. Feel free to contact me via email, Twitter or smoke signal.
+				div#welcome <span style="font-size:30px;font-weight:bold;">W</span>elcome here, I'm Remi Melisson, Ph.D. student and enthusiast developper. I started my thesis in october 2010 into the Orange Labs at Grenoble. My work is supervised by the INRIA ADAM Team, associated to the University of Lille 1. Here you can find some information about my work and other computing activities. Feel free to contact me via email, Twitter or why not, smoke signals.
 				div#logo_div
 					img#logo_orange.logo(src="img/orange-logo.png")
 					img#logo_inria.logo(src="img/logo_INRIA.png")
@@ -36,13 +36,38 @@ html(lang="en")
 				span#liam
 					<img src="img/enveloppe.jpg" alt="send me"/> 
 
-			div.content.invisible_content#resume Download my resume : <br /><br />
+			div.content.invisible_content#resume Download my resume :
 				div#download
 					a(href='/', 'french resume') FR
 					\ / 
 					a(href='/', 'english resume') EN
-				
+				br
+				hr
+				br
+				span.hash3 now 
+				span.cv_line Ph.D. student, with the INRIA ADAM Project-Team and the Orange Labs, Meylan
+				br
+				br
+				span.hash3 2010
+				span.cv_line Research Engineer, ADAM Project-Team at INRIA Lille - Nord Europe.
+				br
+				br
+				span.hash3 2009
+				span.cv_line Master Degree at the University of Lille : Software Engineering and Architecture - Ingenierie et architecture logicielle
+				br
+				br
+				span.hash3 2009
+				span.cv_line End-of-studies internship at Open for 6 months. Software engineering : .Net, Spring, NHibernate - Project management. Paris.
+				br
+				br
+				span.hash3 2008
+				span.cv_line Internship, DART Project-Team at INRIA Lille - Nord Europe. Parallel Programming on GPU : ASM, C, C++, CUDA.
+
 			div.content.invisible_content#work
+				h3 Thesis
+				p.small	blaba lba l abl ablaba lala blalbaalb lbalbaa lbalba
+				br
+				hr
 				... past projects :
 				h3 Mundle
 				p.small Mundle is a tool which provide a way for dynamically convert maven artifact into OSGi bundles at runtime. Based on bnd and Maven 3 API, it allows to benefit from the Maven dependency description in order to deploy Maven artifact as bundles. This tool should facilitate the migration of standard Maven based Java project onto OSGi platforms.
@@ -61,8 +86,9 @@ html(lang="en")
 						h3 2011
 						ul
 							li
-								p.publi blalablablablaa
+								p.small blalablablablaa
 					li 
+						hr
 						h3 2010
 						ul
 							li
