--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -30,15 +30,19 @@ html(lang="en")
                 div#logo_div
                     img#logo_orange.logo(src="img/orange-logo.png")
                     img#logo_inria.logo(src="img/logo_INRIA.png")
-            div.content.invisible_content#contact Well, you can find me there : <br /><br />
+            div.content.invisible_content#contact Well, you can find me <a href="http://maps.google.fr/maps/place?q=Orange+R%26D+Meylan&hl=en&cid=8451382217444420832" target="_blank">there</a> : <br /><br />
                 <a href="http://www.twitter.com/rmelisson"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-a.png" alt="Follow rmelisson on Twitter"/></a>
                 <br/>
                 <br/>
-                <a href="http://www.github.com/rmelisson"><img src="https://github.com/images/modules/header/logov3.png" alt="me on GitHub"/></a>
+                <a href="https://profiles.google.com/u/0/112651096543043920931"><img src="img/g-plus-icon.png" alt="Follow me on G+"/></a>
                 <br/>
                 <br/>
+                //-
+                  <a href="http://www.github.com/rmelisson"><img src="https://github.com/images/modules/header/logov3.png" alt="me on GitHub"/></a>
+                  <br/>
+                  <br/>
                 span#liam
-                    <img src="img/enveloppe.jpg" alt="send me"/> 
+                    <img src="img/enveloppe.jpg" alt="send me" onclick="confirm('rmelisson gmail.com');"/> 
 
             div.content.invisible_content#resume 
                 //- Download my resume :
@@ -96,7 +100,7 @@ html(lang="en")
                         h3 2010
                         ul
                             li
-                                p.small <b>Reconfigurable Run-Time Support for Distributed Service Component Architectures.</b> Remi Melisson, Philippe Merle, Daniel Romero, Romain Rouvoy and Lionel Seinturier. In <i>25th International Conference on Automated Software Engineering ([ASE'10] (http://soft.vub.ac.be/ase2010/))</i>. Tool Demonstration. Antwerp, Belgium. September, 2010. To appear. [HAL]
+                                p.small <b>Reconfigurable Run-Time Support for Distributed Service Component Architectures.</b> Remi Melisson, Philippe Merle, Daniel Romero, Romain Rouvoy and Lionel Seinturier. In <i>25th International Conference on Automated Software Engineering ([ASE 10] (http://soft.vub.ac.be/ase2010/))</i>. Tool Demonstration. Antwerp, Belgium. September, 2010. To appear. [HAL]
                             li
-                                p.small <b>Supporting Pervasive and Social Communications with FraSCAti.</b> Remi Melisson, Daniel Romero, Romain Rouvoy and Lionel Seinturier. In <i>3rd International Workshop on Context-aware Adaptation Mechanisms for Pervasive and Ubiquitous Services (CAMPUS’10).</i> Electronic Communications of EASST (ECEASST). Amsterdam, Netherlands. June 10, 2010. To appear. [HAL]
+                                p.small <b>Supporting Pervasive and Social Communications with FraSCAti.</b> Remi Melisson, Daniel Romero, Romain Rouvoy and Lionel Seinturier. In <i>3rd International Workshop on Context-aware Adaptation Mechanisms for Pervasive and Ubiquitous Services (CAMPUS 10).</i> Electronic Communications of EASST (ECEASST). Amsterdam, Netherlands. June 10, 2010. To appear. [HAL]
                 
