--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -18,11 +18,13 @@ html(lang="en")
         div.content#home
           div#img_div
               img#me_img(src="img/id.jpg")
-          div#welcome <span class="capital">W</span>elcome here, I'm Remi Melisson, Ph.D. student and enthusiast developper. I started my thesis in october 2010 into the 
+          div#welcome <span class="capital">W</span>elcome here, I'm Remi Melisson, Ph.D. student and enthusiast developper. 
+          p I started my thesis in october 2010 into the 
               a(href="http://www.orange.com/en_EN/innovation/create/Orange_Labs_network/", "Orange Labs Website") Orange Labs
               &nbsp;at Grenoble. My work is supervised by the 
               a(href="http://adam.lille.inria.fr/", "ADAM website") INRIA ADAM Team
-              , associated to the University of Lille 1. Here you can find some information about my work and other computing activities. Feel free to contact me via email, Twitter or why not, smoke signals.
+              , associated to the University of Lille 1. 
+              p Here you can find some information about my work and other computing activities. Feel free to contact me via email, Twitter or why not, smoke signals.
           div#logo_div
               img#logo_orange.logo(src="img/orange-logo.png")
               img#logo_inria.logo(src="img/logo_INRIA.png")
