--- a/nodejs/isoldry/views/layout.jade
+++ b/nodejs/isoldry/views/layout.jade
@@ -4,13 +4,24 @@ html(lang="fr")
         title Isoldry
         link(href="style/style.css", media="screen", rel="stylesheet", type="text/css")
         link(href="http://fonts.googleapis.com/css?family=Gudea", rel="stylesheet", type="text/css")
-
-        script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js")
+        //script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js")
+        script(src="javascript/jquery.min.js")
         script(src="javascript/jquery.corner.js")
         script(src="javascript/isoldry.js")
     body
+        div#header
+          div#logo
+            img#logo(src="img/logo.png")
+          div#links
+            span.link.selected_link#link_accueil: a(href='#') Accueil
+            span.link#link_produits: a(href='#') Produits
+            span.link#link_contact: a(href='#') Contact
+            span.link#link_isolconv: a(href='#') IsolConv
+          
         div#main 
-            div#left
-                img#logo(src="img/logo.png")
-            div#right 
-                p Bienvenue chez Isoldry, le spécialiste des systèmes de revêtement de facade Dryvit. <br /> ____ _ ____ <br/> <br/> Notre site internet est actuellement en construction.
+            div.content#accueil
+              p Bienvenue chez Isoldry, le spécialiste des systèmes de revêtement de facade Dryvit. <br /><br /> Vous trouverez ici des informations concernant nos produits ainsi que nos coordonnées. Nous vous invitons également à essayer notre calculateur de résistance thermique.
+            div.content.invisible_content#produits
+              p Nous distribuons l'ensemble de la gamme Drivyt.
+            div.content.invisible_content#contact
+              p Dumont Justin : jdumont@isoldry.com
