--- a/nodejs/isoldry/views/layout.jade
+++ b/nodejs/isoldry/views/layout.jade
@@ -1,7 +1,7 @@
 !!! 5
 html(lang="fr")
     head
-        title Isoldry
+        title isoldry
         link(href="style/style.css", media="screen", rel="stylesheet", type="text/css")
         link(href="http://fonts.googleapis.com/css?family=Gudea", rel="stylesheet", type="text/css")
         //script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js")
@@ -23,5 +23,4 @@ html(lang="fr")
               p Bienvenue chez Isoldry, le spécialiste des systèmes de revêtement de facade Dryvit. <br /><br /> Vous trouverez ici des informations concernant nos produits ainsi que nos coordonnées. Nous vous invitons également à essayer notre calculateur de résistance thermique.
             div.content.invisible_content#produits
               p Nous distribuons l'ensemble de la gamme Drivyt.
-            div.content.invisible_content#contact
-              p Dumont Justin : jdumont@isoldry.com
+            div.content.invisible_content#contact Dumont Justin : jdumont@isoldry.com <br /> <br /> 57, rue de je ne sais quoi <br /> 62333 Blablaville
