--- a/nodejs/isoldry/views/layout.jade
+++ b/nodejs/isoldry/views/layout.jade
@@ -11,16 +11,19 @@ html(lang="fr")
     body
         div#header
           div#logo
-            img#logo(src="img/logo.png")
+            img#logo-img(src="img/banniere.png")
           div#links
             span.link.selected_link#link_accueil: a(href='#') Accueil
+            span.link#link_ite: a(href='#') ITE
+            span.link#link_references: a(href='#') References
             span.link#link_produits: a(href='#') Produits
             span.link#link_contact: a(href='#') Contact
-            span.link#link_isolconv: a(href='#') IsolConv
-          
         div#main 
             div.content#accueil
-              p Bienvenue chez Isoldry, le spécialiste des systèmes de revêtement de facade Dryvit. <br /><br /> Vous trouverez ici des informations concernant nos produits ainsi que nos coordonnées. Nous vous invitons également à essayer notre calculateur de résistance thermique.
+              div#news <b>News</b> <br /> Isoldry sera présent sur le salon blabla à Lille le 28 août, plus d'info sur la <a href="http://www.google.com/">page dédiée</a>
+              p Bienvenue chez Isoldry, le spécialiste des systèmes de revêtement de façade Dryvit. <br /><br /> Vous trouverez ici des informations concernant nos produits ainsi que nos coordonnées. Nous vous invitons également à essayer notre calculateur de résistance thermique. 
+              p ij poij p poj poj pojpoj pojpoj pj poj. ozid pzovj ezfpoz oizhofho zoeihfzoe ozie ozihe ozie oize oihzeoihoh zoiezpfj
+              p ij poij p poj poj pojpoj pojpoj pj poj. ozid pzovj ezfpoz oizhofho zoeihfzoe ozie ozihe ozie oize oihzeoihoh zoiezpfj
             div.content.invisible_content#produits
               p Nous distribuons l'ensemble de la gamme Drivyt.
             div.content.invisible_content#contact 
